test/1.2/errors/T_EBITRN_2.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
bitorder be;

bank b {
    register r size 4 @ undefined {
        /// ERROR EBITRN
        field f [3:2];
    }
}
